# wallet-core

./: CMakeLists.txt  Dockerfile
.github/workflows/: android-ci.yml  ios-ci.yml  linux-ci-sonarcloud.yml  linux-ci.yml  linux-sampleapp-ci.yml  wasm-ci.yml
cmake/: CompilerWarnings.cmake  Protobuf.cmake  StandardSettings.cmake
codegen/lib/templates/: hrp.h.erb
docs/: registry.md
include/TrustWalletCore/: TWAnySigner.h  TWBase.h  TWCardano.h  TWData.h  TWString.h
jni/cpp/: Random.cpp
protobuf-plugin/: CMakeLists.txt  c_typedef.cc  swift_typealias.cc
samples/cpp/: CMakeLists.txt
src/: Base32.h  BinaryCoding.h  Data.h  HDWallet.cpp  PublicKey.cpp
src/Algorand/: BinaryCoding.h
src/Ethereum/ABI/: ParamFactory.cpp
src/Everscale/CommonTON/: Cell.cpp  Cell.h
src/Filecoin/: Address.cpp
src/Groestlcoin/: Address.cpp
src/Hedera/: Address.cpp
src/Keystore/: EncryptionParameters.cpp
src/MultiversX/: Transaction.h  TransactionFactoryConfig.h
src/NEO/: Transaction.cpp
src/NULS/: Address.cpp
src/Nano/: Signer.cpp
src/Solana/: CompiledInstruction.cpp  LegacyMessage.cpp  Transaction.cpp  VersionedTransaction.cpp
src/XRP/: Transaction.cpp
src/interface/: TWBitcoinScript.cpp  TWCardano.cpp  TWHash.cpp
tests/: CMakeLists.txt
tests/chains/Polkadot/: SignerTests.cpp
tests/chains/Zilliqa/: SignerTests.cpp
tests/common/: TestUtilities.cpp
tools/: build-and-test  generate-files  install-rust-dependencies  rust-bindgen  win-generate-files.bat  win-rust-bindgen.bat  windows-build.ps1  windows-dependencies.ps1  windows-generate.ps1
trezor-crypto/: CMakeLists.txt
trezor-crypto/crypto/: bignum.c  cardano.c  rand.c
trezor-crypto/crypto/tests/: CMakeLists.txt  test_check.c
trezor-crypto/include/TrezorCrypto/: groestl_internal.h
walletconsole/: CMakeLists.txt
